--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #38b434;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +36,52 @@
   to {
     transform: rotate(360deg);
   }
+}
+.view-rooms-home-button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none; 
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.view-rooms-home-button:hover {
+  background-color: #0056b3;
+}
+.FormGroup {
+  margin-bottom: 20px;
+}
+
+.FormRow {
+  margin-bottom: 20px;
+}
+
+button {
+  background-color: #6772e5;
+  color: white;
+  font-weight: bold;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #5469d4;
+}
+
+/* CSS pour le footer */
+.my-footer {
+  background-color: #dee1e7;
+  color: rgb(40, 49, 48);
+  text-align: center;
+  padding: 10px 0;
+  position: relative;
+  width: 100%;
+  bottom: 0;
 }
